--- a/style.css
+++ b/style.css
@@ -5,3 +5,44 @@
 
 }
 
+
+
+h1 {
+    color: white;
+    font-size: 2em;
+    justify-content: center;
+}
+
+h2 {
+    color: white;
+    font-size: 1em;
+}
+
+header {
+        /* min-height: 30vh; */
+        background: url(./img/hero-image.jpg);
+        background-size: 150%;
+        background-position: center;
+        height: 100vh;
+        
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+button {
+    width: 120px;
+    height: 30px;
+    margin:10px;
+    border-radius: 5px;
+    background-color: red;
+    color: white;
+}
+
+img{
+    width: 50px;
+    height: 50px;
+}
