--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
+
+@font-face {
+    font-family: 'Halflings';
+    src: url('./fonts/glyphicons-halflings-regular.ttf') format(‘truetype’),
+        url('./fonts/glyphicons-halflings-regular.woff') format(‘woff’),
+        url('./fonts/glyphicons-halflings-regular.woff') format(‘woff2’),
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
 
 }
 
@@ -10,27 +19,38 @@
 h1 {
     color: white;
     font-size: 2em;
-    justify-content: center;
+    text-align: center;
+    font-family: 'Halflings';
 }
 
 h2 {
     color: white;
     font-size: 1em;
+    text-align: center;
 }
 
 header {
-        /* min-height: 30vh; */
-        background: url(./img/hero-image.jpg);
-        background-size: 150%;
-        background-position: center;
-        height: 100vh;
-        
+    background-color: black;
+    color:grey;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 30px;
+}
+
+header>div:first-child{
+    margin-right: 30px;
 }
 
 section{
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+    background: url(./img/hero-image.jpg);
+    background-size: 150%;
+    /* background-position: center; */
+    height: 100vh;
 }
 
 
@@ -43,7 +63,11 @@ button {
     color: white;
 }
 
-img{
+header>img{
+    width: 15em;
+}
+
+section>img{
     width: 50px;
     height: 50px;
 }
