--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
         url('./fonts/glyphicons-halflings-regular.woff') format(‘woff2’),
 }
 
-*{
+body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Halflings','MS sans serif';
    
 
 }
@@ -19,13 +20,17 @@
 h1 {
     color: white;
     font-size: 2em;
+    margin-top: 30px;
+    margin-bottom: 30px;
     text-align: center;
-    font-family: 'Halflings';
+    
 }
 
 h2 {
     color: white;
     font-size: 1em;
+    font-weight: normal;
+    margin-bottom: 30px;
     text-align: center;
 }
 
@@ -38,29 +43,30 @@ header {
     height: 30px;
 }
 
-header>div:first-child{
+header>div>span:first-child{
     margin-right: 30px;
 }
 
-section{
+.hero{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
     background: url(./img/hero-image.jpg);
-    background-size: 150%;
+    background-size: 110%;
     /* background-position: center; */
-    height: 100vh;
+    height: 55vh;
 }
 
 
 button {
-    width: 120px;
-    height: 30px;
-    margin:10px;
+    width: 240px;
+    height: 60px;
+    margin:30px;
     border-radius: 5px;
     background-color: red;
     color: white;
+    font-size: 1.8em;
 }
 
 header>img{
@@ -68,6 +74,6 @@ header>img{
 }
 
 section>img{
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
 }
