--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
 @font-face {
     font-family: 'Halflings';
-    src: url('./fonts/glyphicons-halflings-regular.ttf') format(‘truetype’),
-        url('./fonts/glyphicons-halflings-regular.woff') format(‘woff’),
-        url('./fonts/glyphicons-halflings-regular.woff') format(‘woff2’),
+    src: url('./fonts/glyphicons-halflings-regular.ttf') format('truetype'),
+        url('./fonts/glyphicons-halflings-regular.woff') format('woff'),
+        url('./fonts/glyphicons-halflings-regular.woff2') format('woff2')
 }
 
 body{
